syntax = "proto3";

option go_package = "./pb";

service RelationRpc {
    rpc AddFollow (AddFollowRequest) returns (AddFollowResponse) {}
    rpc DelFollow (DelFollowRequest) returns (DelFollowResponse) {}
    rpc GetFollowList (GetFollowListRequest) returns (GetFollowListResponse) {}
    rpc GetFollowerList (GetFollowerListRequest) returns (GetFollowerListResponse) {}
    rpc GetUserFollowCount (GetUserFollowCountRequest) returns (GetUserFollowCountResponse) {}
    rpc GetUserFollowerCount (GetUserFollowerCountRequest) returns (GetUserFollowerCountResponse) {}
    rpc GetFriendList (GetFriendListRequest) returns (GetFriendListResponse) {}
    rpc IsFollow (IsFollowRequest) returns (IsFollowResponse) {}
}

message AddFollowRequest {
    int64 user_id = 1;
    int64 follow_user_id = 2;
}

message AddFollowResponse {

}

message DelFollowRequest {
    int64 user_id = 1;
    int64 follow_user_id = 2;
}

message DelFollowResponse {

}

message GetFollowListRequest {
    int64 user_id = 1;
}

message GetFollowListResponse {
    repeated int64 follow_user_id_list = 1;
}

message GetFollowerListRequest {
    int64 user_id = 1;
}

message GetFollowerListResponse {
    repeated int64 follower_user_id_list = 1;
}

message GetUserFollowCountRequest {
    int64 user_id = 1;
}

message GetUserFollowCountResponse {
    int64 count = 1;
}

message GetUserFollowerCountRequest {
    int64 user_id = 1;
}

message GetUserFollowerCountResponse {
    int64 count = 1;
}

message GetFriendListRequest {
    int64 user_id = 1;
}

message GetFriendListResponse {
    repeated int64 friend_user_id_list = 1;
}

message IsFollowRequest {
    int64 user_id = 1;
    int64 target_user_id = 2;
}

message IsFollowResponse {
    bool is_follow = 1;
}


